# okta-aws-login

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  AWSCredsFile.hs  App.hs  AppConfig.hs  Args.hs  CODEOWNERS  DockerConfig.hs  Main.hs  Makefile  OktaClient.hs  README.md  STS.hs  Types.hs  cabal.project  cabal.project.local  default.nix  hie.yaml  install  okta-aws-login.cabal  package.yaml  pubkeyring.gpg  shell.nix  stack.yaml
.github/workflows/: cache-shell.yml  ci.yml
app/: Main.hs
data/: test-config-current-json-format.json  test-config-old-json-format.json
nix/: precommit.nix  sources.json
nixpkgs/: default.nix
src/: AWSCredsFile.hs  App.hs  AppConfig.hs  Args.hs  DockerConfig.hs  DockerLogin.hs  Main.hs  OktaClient.hs  OktaLogin.hs  STS.hs  Types.hs
test/: TestImports.hs
test/Specs/: AppConfigSpec.hs
