name:                okta-aws-login
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/okta-aws-login#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable okta-aws-login
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       App
                       AWSCredsFile
                       AppConfig
                       Args
                       DockerConfig
                       OktaClient
                       STS
                       Types

  build-depends:       base
                     , aeson
                     , aeson-casing
                     , amazonka
                     , amazonka-core
                     , amazonka-ecr
                     , amazonka-sts
                     , base64-bytestring
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , control-bool
                     , directory
                     , exceptions
                     , filepath
                     , gitrev
                     , http-client
                     , http-conduit
                     , http-types
                     , ini
                     , lens
                     , lens-aeson
                     , monad-control
                     , monad-logger
                     , monad-loops
                     , optparse-applicative
                     , tagsoup
                     , text
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , utf8-string
                     , xml-conduit
                     , xml-lens

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
